--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="#">
                     <img class="logo" src="img/Logo.png" alt="" width="30" height="24">
                 </a>
-            <a class="sing">Sign In</a>
+            <a class="sing" href="https://www.amazon.com/ap/signin?openid.pape.max_auth_age=0&openid.return_to=https%3A%2F%2Fna.primevideo.com%2Fauth%2Freturn%2Fref%3Dav_auth_ap%3F_t%3DsgwblMrQ73QVZMVYoRu4yPCmm1RYIK-FV4sOInmfELXK0AAAAAQAAAABjhrLJcmF3AAAAAPgWC9WfHH8iB-olH_E9xQ%26location%3D%2F%3Fref_%253Datv_auth_pre%2526mrntrk%253Dslid__pgrid_42306243048_pgeo_9041008_x__ptid_kwd-2850171361&openid.identity=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&accountStatusPolicy=P1&openid.assoc_handle=amzn_prime_video_sso_us&openid.mode=checkid_setup&siteState=135-1456611-5710037&language=en_US&openid.claimed_id=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0%2Fidentifier_select&openid.ns=http%3A%2F%2Fspecs.openid.net%2Fauth%2F2.0" >Sign In</a>
             </div>
         </nav>
     </header>
